[gd_scene load_steps=4 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://play_button.tscn" type="PackedScene" id=2]

[sub_resource type="StreamTexture" id=1]
flags = 5
load_path = "res://.import/circle.png-10953cad44a8947fbdd4128a631e9e52.stex"

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="sprite_pool_parent" type="Node2D" parent="."]

[node name="dotsprite" type="Sprite" parent="."]
position = Vector2( -159.935, 103.13 )
texture = SubResource( 1 )

[node name="labels_bg" type="ColorRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 25.5819, 1.73648 )
color = Color( 0.0705882, 0.0705882, 0.0705882, 0.898039 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 146.0
margin_bottom = 24.0
text = "Fibonacci spirals 2D"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="n_samples_slider" type="HSlider" parent="."]
margin_left = 10.0
margin_top = 30.0
margin_right = 610.0
margin_bottom = 46.0
min_value = 1.0
max_value = 5000.0
value = 1000.0
allow_greater = true
allow_lesser = true
tick_count = 50
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="n_samples_label" type="Label" parent="."]
margin_left = 666.0
margin_top = 31.0
margin_right = 732.0
margin_bottom = 45.0
text = "n points"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fps_label" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.529412 )
margin_left = 974.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 24.0
text = "FPS"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tween_nsamples" type="Tween" parent="."]

[node name="play_button" parent="." instance=ExtResource( 2 )]
margin_left = 619.0
margin_top = 18.0
margin_right = 998.0
margin_bottom = 392.0

[node name="switch_to_3d_button" type="Button" parent="."]
margin_left = 483.0
margin_top = 5.0
margin_right = 573.0
margin_bottom = 25.0
text = "switch to 3d"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="value_changed" from="n_samples_slider" to="." method="_on_n_samples_slider_value_changed"]
[connection signal="tween_completed" from="tween_nsamples" to="." method="_on_tween_nsamples_tween_completed"]
[connection signal="toggled" from="play_button" to="." method="_on_play_button_toggled"]
[connection signal="pressed" from="switch_to_3d_button" to="." method="_on_switch_to_3d_button_pressed"]
